Related publication body text cut off fix

--- a/assets/scss/molecules/cards/_publication-card.scss
+++ b/assets/scss/molecules/cards/_publication-card.scss
@@ -25,7 +25,7 @@
 
             .cta {
                 bottom: 0;
-                margin-top: 30px;
+                margin-top: 25px;
                 position: relative;
             }
         }
